# NetKeyer

./: .gitignore  NetKeyer.csproj  Program.cs  README.md
.github/workflows/: build-installer.yml
Audio/: SidetoneProvider.cs
Helpers/: DebugLogger.cs
Keying/: CWReader.cs  IambicKeyer.cs
Midi/: MidiPaddleInput.cs
Midi/LibreMidi/: LibreMidiInput.cs  NativeMethods.cs
Services/: KeyingController.cs
ViewModels/: MainWindowViewModel.cs
Views/: MainWindow.axaml
native/: CMakeLists.txt  build.ps1  build.sh  exports.map  netkeyer_midi_shim.c
